--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "monitor": "node --expose-gc server.js"
   },
   "dependencies": {
-    "canvas": "^2.11.2",
+    "canvas": "^2.11.0",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.64.0",
     "ws": "^8.14.2"
@@ -30,7 +30,7 @@
     "alerts"
   ],
   "engines": {
-    "node": ">=18.20.3",
+    "node": "18.x",
     "npm": ">=9.0.0"
   },
   "author": "",
